# rust_rpc

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: api.rs  config.rs  config.toml  main.rs  methods.rs  shardeum.rs
