[package]
name = "rustpc_shardeum"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework (batteries included)
axum = { version = "0.8.4", features = [] }

# Async runtime
tokio = { version = "1.46.1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12.22", features = ["json"] }

# JSON handling
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# Utilities
rand = "0.9.1"
uuid = { version = "1.17.0", features = ["v4"] }

# Logging
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

# Config File Parsing
toml = "0.8"